--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>DoctorCare</title>
 
 
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
 
 
 <script src="https://unpkg.com/scrollreveal"></script>
-<script src="/index.js"></script>
+<script src="./index.js"></script>
 
 </head>
 
@@ -138,7 +138,7 @@
    
   
  <div class="col-b">
-  <img src="assets/image2.png" alt="dogheart">
+  <img src="./assets/image2.png" alt="dogheart">
  </div>
 
 
@@ -287,7 +287,7 @@
   </div>
 
   <div class="col-b">
-    <img src="/assets/Pic.png" alt="medico">
+    <img src="./assets/Pic.png" alt="medico">
   </div>
 
   </div>
@@ -335,7 +335,7 @@
     </div>
   </div>
   <div class="col-b">
-    <img src="/assets/pic (1).png" alt="">
+    <img src="./assets/pic (1).png" alt="">
   </div>
   </div>
   </div>
